<resources>
    <string name="app_name">ILoveEat</string>
    <string name="title_explore">Explore</string>
    <string name="title_message">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_reg">Don\'t have account? Register.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_price_1">Price▼</string>
    <string name="btn_prefer_1">Prefer▼</string>
    <string name="btn_nationality_1">Nationality▼</string>
    <string name="btn_price_2">Price▲</string>
    <string name="btn_prefer_2">Prefer▲</string>
    <string name="btn_nationality_2">Nationality▲</string>
    <string name="warn_repeatpass">Repeat password must be same</string>
    <string-array name="Nationality">
        <item>Region</item>
        <item>Asia</item>
        <item>N.Americam</item>
        <item>Europe</item>
        <item>Oceania</item>
        <item>Africa</item>
        <item>S.Americam</item>
        <item>Antarctica</item>
    </string-array>
    <string-array name="Prefer">
        <item>Prefer</item>
        <item>Salty</item>
        <item>Sweet</item>
        <item>Spicy</item>
    </string-array>
    <string-array name="Price">
        <item>Price</item>
        <item>&lt;50</item>
        <item>50-100</item>
        <item>100-200</item>
        <item>200-300</item>
        <item>&gt;300</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="btn_logout">Log Out</string>
    <string name="title_activity_reg">Register</string>
    <string name="btn_sign_up">Finish Register</string>
    <string name="Password_repeat">Repeat Password</string>

    <!-- String for login page ZZH -->
    <string name="text_login">We provide personalized comments and dish recommendation for every user. You can get every dish you want here and prevent hanging in the restaurant.</string>
    <string name="sweet">Sweet:</string>
    <string name="spicy">Spicy:</string>
    <string name="salty">Salty:</string>
    <string name="text_change_profile">New preferences, modify something you want to change:</string>
    <string name="change_email">Change your Email</string>
    <string name="change_password">Change your password</string>
    <string name="text_change_pass_rep">Repeat changed password</string>
    <string name="change_username">Change your username</string>
    <string name="btn_submit">Submit and verify password</string>
    <string name="text_foodname">Food Name</string>
    <string name="text_foodprice">Price</string>
    <string name="text_default_0stars">☆☆☆☆☆</string>
    <string name="text_1stars">★☆☆☆☆</string>
    <string name="text_2stars">★★☆☆☆</string>
    <string name="text_3stars">★★★☆☆</string>
    <string name="text_4stars">★★★★☆</string>
    <string name="text_5stars">★★★★★</string>
    <string name="text_foodlocation">Location</string>
    <string name="text_commentliked_default">Liked your comment on food \"Default food\":</string>
    <string name="like_comment_dafault">Like your comment!</string>
    <string name="food_comment_dafault">I love this food!</string>
    <string name="text_commentreplied_default">Replied your comment on food \"Default food\":</string>
    <string name="food_comment_reply_dafault">Agree with you!</string>
    <string name="system">System Message</string>
    <string name="system_message_default">You were liked by 14 people~</string>
    <string name="messagetime_default">1 minutes ago</string>
    <string name="title_activity_food_detail">Food_detail</string>
    <string name="nationality">Nationality</string>
    <string name="price">Price:</string>
    <string name="default_price">109 sek</string>
    <string name="topcomments">Top comments:</string>
    <string name="writecomment">New Comment</string>
    <string name="overall">Overall rating:</string>
    <string name="textedit_writecomments">Write some short comments(Optional)...</string>
    <string name="submit">Submit</string>
    <string name="rememberaccount">Remember my Email</string>
    <string name="verify">Verify E-mail</string>
    <string name="text_verify">Enter verifycation code here</string>
    <string name="mycomments">My Comments</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change_profile">Change Profile</string>
    <string name="text_verifyemail">You have not yet verified your email...... Please click the link on E-mail you have received.</string>
    <string name="resend">Resend</string>
    <string name="changeicon">Change your avater</string>
    <string name="nomessage" >No recent messages!</string>
</resources>
