<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_usericon_comments"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/usericon" />

            <TextView
                android:id="@+id/textView_username_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/username"
                app:layout_constraintBottom_toTopOf="@+id/textView_nationality"
                app:layout_constraintStart_toEndOf="@+id/imageView_usericon_comments"
                app:layout_constraintTop_toTopOf="@+id/imageView_usericon_comments" />

            <TextView
                android:id="@+id/textView_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/nationality"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_usericon_comments"
                app:layout_constraintStart_toEndOf="@+id/imageView_usericon_comments" />

            <TextView
                android:id="@+id/textView_time_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/messagetime_default"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_nationality"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView_comment_content"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_commentcontent"
                app:srcCompat="@drawable/p2_1" />

            <EditText
                android:id="@+id/editText_replycomment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
                app:layout_constraintStart_toEndOf="@+id/imageButton_reply"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <ImageButton
                android:id="@+id/imageButton3"
                style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                android:layout_width="36dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:srcCompat="@drawable/baseline_thumb_up_black_24" />

            <ImageButton
                android:id="@+id/imageButton_reply"
                android:layout_width="36dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:srcCompat="@drawable/baseline_message_black_24" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sweet"
                app:layout_constraintStart_toEndOf="@+id/imageView_comment_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_commentcontent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/spicy"
                app:layout_constraintStart_toEndOf="@+id/imageView_comment_content"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/salty"
                app:layout_constraintStart_toEndOf="@+id/imageView_comment_content"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                app:layout_constraintStart_toEndOf="@+id/imageView_comment_content"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView_foodprice_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar_salty"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView_commentcontent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/food_comment_dafault"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_usericon_comments" />

            <RatingBar
                android:id="@+id/ratingBar_sweet"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9" />

            <RatingBar
                android:id="@+id/ratingBar_spicy"
                style="@android:style/Widget.Material.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar_sweet" />

            <RatingBar
                android:id="@+id/ratingBar_salty"
                style="@android:style/Widget.Material.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar_spicy" />

            <RatingBar
                android:id="@+id/ratingBar_overall"
                style="@android:style/Widget.Material.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>