<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_commentliked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="@dimen/activity_horizontal_margin">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_insidecommentliked"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_user"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/u1" />

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_user"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_content1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/text_commentliked_default"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_user"
                app:layout_constraintTop_toBottomOf="@+id/textView_username" />

            <TextView
                android:id="@+id/textView_content2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/like_comment_dafault"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_user"
                app:layout_constraintTop_toBottomOf="@+id/textView_content1" />

            <TextView
                android:id="@+id/textView_time_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/messagetime_default"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>